--- a/client/package.json
+++ b/client/package.json
@@ -11,16 +11,17 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@fvilers/disable-react-devtools": "^1.3.0",
-    "@mui/icons-material": "^6.1.1",
+    "@mui/icons-material": "^6.1.2",
     "@mui/lab": "^6.0.0-beta.10",
-    "@mui/material": "^6.1.1",
-    "@mui/x-date-pickers": "^7.17.0",
+    "@mui/material": "^6.1.2",
+    "@mui/x-date-pickers": "^7.18.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.4",
+    "chartjs-plugin-zoom": "^2.0.1",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
