--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "@mui/icons-material": "^6.1.2",
     "@mui/lab": "^6.0.0-beta.10",
     "@mui/material": "^6.1.2",
-    "@mui/x-date-pickers": "^7.18.0",
+    "@mui/x-date-pickers": "^7.19.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -25,6 +25,7 @@
     "chartjs-plugin-zoom": "^2.0.1",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
+    "npm": "^10.9.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-chartjs-2": "^5.2.0",
@@ -32,6 +33,8 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
     "react-swipeable": "^7.0.1",
+    "run": "^1.5.0",
+    "start": "^5.1.0",
     "stylis": "^4.3.4",
     "stylis-plugin-rtl": "^2.1.1",
     "web-vitals": "^2.1.4"
