--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
     "react-swipeable": "^7.0.1",
+    "recharts": "^2.12.7",
     "run": "^1.5.0",
     "start": "^5.1.0",
     "stylis": "^4.3.4",
